# Chase-the-Shadow

./: .gitignore  .gitmodules  2D-Projekt Geschichte.docx  CMakeLists.txt  README.md  index.html  params.json  ya2drpg.sln
_engine/: AiBasicComponent.cpp  AiBasicComponent.h  AnimationComponent.cpp  AnimationComponent.h  CMakeLists.txt  CircleCollider.cpp  CircleCollider.h  Collider.h  CollisionComponent.cpp  CollisionComponent.h  Component.h  GameObject.cpp  GameObject.h  InputComponent.cpp  InputComponent.h  StateComponent.cpp  StateComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h  Vector2D.cpp  Vector2D.h  _engine.h  _engine.vcxproj  _engine.vcxproj.filters
_engine/source/: AiBasicComponent.cpp  AiBasicComponent.h  AnimationComponent.cpp  AnimationComponent.h  CircleCollider.cpp  CircleCollider.h  Collider.h  CollisionComponent.cpp  CollisionComponent.h  Component.h  GameObject.cpp  GameObject.h  InputComponent.cpp  InputComponent.h  StateComponent.cpp  StateComponent.h  TextComponent.cpp  TextComponent.h  TextureComponent.cpp  TextureComponent.h  TextureConmponent.cpp  TransformComponent.cpp  TransformComponent.h  Vector2D.cpp  Vector2D.h  _engine.h
tests/: CMakeLists.txt  Collision.h  runner.cpp  tests.vcxproj  (+1 more)
ya2drpg/source/: CMakeLists.txt  Derivata.h  README.md  main.cpp
ya2drpg/source/engine/: AnimationComponent.cpp  AnimationComponent.h  CollisionManager.cpp  CollisionManager.h  Component.h  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  InputComponent.cpp  InputComponent.h  MapLoader.cpp  MapLoader.h  Player.cpp  Player.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h
ya2drpg/source/world/: Chunk.cpp  Chunk.h  ScreenManager.cpp  ScreenManager.h  World.cpp  World.h
(+30 files in other folders)
